# loops-skill

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  __main__.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
references/: agent-interface.md  mavis-adapter.md  storage-interface.md  verdict-schema.md
scripts/: example_proposal_skill_builder.py  loop_runtime.py  pyproject.toml
tests/: test_cross_platform.py
