[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loops-skill-runtime"
version = "1.1.1"
description = "Python runtime for the loops-skill SKILL package — 4-agent loop runner with cross-platform support"
readme = "../README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "loops-skill contributors" },
]
keywords = ["agent", "loop", "reflection", "verification", "mavis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Stdlib only by design -- the skill promises no required third-party deps.
dependencies = []

[project.urls]
Homepage = "https://github.com/lrrrq/loops-skill"
Issues = "https://github.com/lrrrq/loops-skill/issues"
Changelog = "https://github.com/lrrrq/loops-skill/blob/main/CHANGELOG.md"

[project.scripts]
loops-skill = "loop_runtime:loop_main"

[tool.setuptools]
py-modules = ["loop_runtime"]

[tool.setuptools.packages.find]
where = ["."]
include = ["loop_runtime*"]